--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "aithink-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "body-parser": "^1.20.3",
@@ -8,4 +14,5 @@
     "firebase": "^11.5.0",
     "nodemailer": "^6.10.0"
   }
+  
 }
